Use KDBusConnectionPool instead of QDBusConnection

QDBusConnection cannot be used across multiple threads

BUG: 315078
BUG: 321764
BUG: 319165

REVIEW: 112011